# QSerializer

./: .gitignore  CMakeLists.txt  LICENSE  QJsonMarshalerLib.pro  QSerializer  README.md  arraykeeper.h  arraykeepers.h  keepersfactory.h  propertykeeper.h  qjsonkeeper.cpp  qjsonkeeper.h  qjsonmarshaler.cpp  qjsonmarshaler.h  qjsonmarshalerlib_global.h  qserializer.pri  simplekeepers.h  uniquekeeper.h
benchmarks/: bench.cpp  bench.h  benchmarks.pro  main.cpp  testclasses.cpp  testclasses.h
example/: QSerializeExample.pro  base.pri  classes.h  general.json  general.xml  main.cpp
example/QSDeserialize/: QSDeserialize.pro  main.cpp
example/QSSerialize/: QSSerialize.pro  main.cpp
example/QSerializerJsonUseCases/: QSerializerJsonUseCases.pro  employee.h  employeeOutput.json  main.cpp
example/QSerializerMacroUseCases/: QSerializerMacroUseCases.pro  field.h  main.cpp
example/QSerializerUseCases/: main.cpp
example/QSerializerXmlUseCases/: QSerializerXmlUseCases.pro  employee.h  employeeOutput.xml  main.cpp
example/withInherit/: employee.h  employeeOutput.json  main.cpp
example/withoutInherit/: employee.h  employeeOutput.json  main.cpp  withoutQJsonMarshalerInherit.pro
example/withoutInherit/withoutQJsonMarshalerInherit/: employee.h  main.cpp  user.h  (+2 more)
src/: QJsonMarshalerLib.pro  QSerializer.pri  QSerializer.pro  arraykeepers.h  keepersfactory.cpp  keepersfactory.h  metakeepers.cpp  metakeepers.h  propertykeeper.h  qjsonmarshaler.cpp  qserializer.cpp  qserializer.h  qserializerlib_global.h  serializerexception.cpp  serializerexception.h  simplekeepers.h
(+4 files in other folders)
